--- a/config/config.json
+++ b/config/config.json
@@ -4,9 +4,10 @@
     "database": {
       "dialect": "mysql",
       "username": "root",
-      "password": "root",
+      "password": "",
       "database": "walletjs",
       "host": "127.0.0.1",
+      "port": "5123",
       "storage": "data/database.sqlite"
     },
     "smtp": {
@@ -17,7 +18,7 @@
     },
     "openexchangerates": {
       "use_env_variable": true,
-      "app_id": "OPENEXCHANGERATES_APP_IeD",
+      "app_id": "f7c3420b31de4df8890aae18aca66740",
       "update_interval": 86400
     },
     "default_from_email": "noreply@dimeshift.com",
